Agregada la seccion testimonials y hechos algunos retoques pequeños

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -144,7 +144,12 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
     <div
       class="text-center text-gray-500 dark:text-gray-200 pt-10 sm:pt-12 font-light flex items-center justify-center"
     >
-      Creado con ❤️ por Teti
+      Creado con ❤️ por&nbsp;
+      <a
+        class="underline hover:no-underline"
+        href="https://github.com/snant-dev"
+        target="_blank">Teti</a
+      >
     </div>
   </div>
 </footer>
