--- a/src/pages/teachers.astro
+++ b/src/pages/teachers.astro
@@ -64,33 +64,33 @@ const socialMediaTeti = [
       socialMedia={socialMediaClauAmura}
     >
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Es la primera Gran Maestra Femenina de Iberoamérica y la ajedrecista
-        latinoamericana mejor clasificada en la historia, alcanzando el puesto
-        12 del mundo en 1991. Entre sus logros destacan la medalla de oro en el
-        Campeonato Mundial Femenino Sub-20 de partidas rápidas en Australia
-        1988, la medalla de bronce en el mundial sub-20 femenino en Chile 1990 y
-        la medalla de plata en las Olimpiadas de Novi Sad 1990. Es campeona
-        argentina de ajedrez femenino en múltiples ocasiones y ha representado a
-        Argentina en diversas competiciones olímpicas. Además, ha obtenido
-        medallas de oro y plata en los Juegos Suramericanos 2022, ha sido
-        campeona panamericana, sudamericana y ha triunfado en varios campeonatos
-        absolutos.
+        &emsp;Es la primera Gran Maestra Femenina de Iberoamérica y la
+        ajedrecista latinoamericana mejor clasificada en la historia, alcanzando
+        el puesto 12 del mundo en 1991. Entre sus logros destacan la medalla de
+        oro en el Campeonato Mundial Femenino Sub-20 de partidas rápidas en
+        Australia 1988, la medalla de bronce en el mundial sub-20 femenino en
+        Chile 1990 y la medalla de plata en las Olimpiadas de Novi Sad 1990. Es
+        campeona argentina de ajedrez femenino en múltiples ocasiones y ha
+        representado a Argentina en diversas competiciones olímpicas. Además, ha
+        obtenido medallas de oro y plata en los Juegos Suramericanos 2022, ha
+        sido campeona panamericana, sudamericana y ha triunfado en varios
+        campeonatos absolutos.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Claudia Amura también es FIDE Trainer y ha sido entrenadora del Equipo
-        Continental Femenino en el Campeonato Mundial de Ajedrez por equipos
-        2021. Es reconocida por su especialidad en trabajar con niños y personas
-        de todas las edades que deseen mejorar sus habilidades en el ajedrez. Su
-        metodología de enseñanza se destaca por su capacidad para detectar las
-        necesidades de sus estudiantes y ayudarlos a mejorar su nivel, no solo
-        corrigiendo errores y potenciando fortalezas, sino también comprendiendo
-        sus actitudes en la competición, lo que ella llama "diagnóstico
-        deportivo".
+        &emsp;Claudia Amura también es FIDE Trainer y ha sido entrenadora del
+        Equipo Continental Femenino en el Campeonato Mundial de Ajedrez por
+        equipos 2021. Es reconocida por su especialidad en trabajar con niños y
+        personas de todas las edades que deseen mejorar sus habilidades en el
+        ajedrez. Su metodología de enseñanza se destaca por su capacidad para
+        detectar las necesidades de sus estudiantes y ayudarlos a mejorar su
+        nivel, no solo corrigiendo errores y potenciando fortalezas, sino
+        también comprendiendo sus actitudes en la competición, lo que ella llama
+        "diagnóstico deportivo".
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Además, Claudia es la creadora de un programa de ajedrez que ha tenido
-        un impacto significativo, llegando a más de 200,000 personas en la
-        provincia de San Luis.
+        &emsp;Además, Claudia es la creadora de un programa de ajedrez que ha
+        tenido un impacto significativo, llegando a más de 200,000 personas en
+        la provincia de San Luis.
       </p>
     </TeacherProfile>
     <TeacherProfile
@@ -101,7 +101,7 @@ const socialMediaTeti = [
       isInverted={true}
     >
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Talentoso Maestro Internacional de ajedrez, con una destacada
+        &emsp;Talentoso Maestro Internacional de ajedrez, con una destacada
         trayectoria desde una temprana edad. A los 14 años, se convirtió en el
         Maestro Internacional más joven de Argentina, destacándose como un
         prodigio en el mundo del ajedrez. Actualmente, con 23 años de edad,
@@ -109,8 +109,8 @@ const socialMediaTeti = [
         constante crecimiento y ambiciones en el tablero.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Entre sus logros más destacados se encuentran su clasificación a la
-        segunda ronda de la FIDE World Cup 2023 en Baku, Azerbaiyán, un hito
+        &emsp;Entre sus logros más destacados se encuentran su clasificación a
+        la segunda ronda de la FIDE World Cup 2023 en Baku, Azerbaiyán, un hito
         impresionante en su carrera. Además, ha obtenido la Medalla de Oro en el
         Sudamericano Juvenil Sub 18 en 2014, convirtiéndose en el Maestro
         Internacional más joven de la historia de Argentina. Sus habilidades
@@ -119,11 +119,12 @@ const socialMediaTeti = [
         Argentino Juvenil en diversas categorías desde Sub 8 hasta Sub 18.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Pablo Acosta es reconocido por su enfoque estratégico, su aguda visión
-        en el tablero y su capacidad para superar desafíos con determinación y
-        habilidad. Como miembro destacado de nuestra academia de ajedrez, Pablo
-        aporta su experiencia y conocimientos para inspirar y guiar a nuestros
-        estudiantes en su propio viaje hacia el éxito en el ajedrez.
+        &emsp;Pablo Acosta es reconocido por su enfoque estratégico, su aguda
+        visión en el tablero y su capacidad para superar desafíos con
+        determinación y habilidad. Como miembro destacado de nuestra academia de
+        ajedrez, Pablo aporta su experiencia y conocimientos para inspirar y
+        guiar a nuestros estudiantes en su propio viaje hacia el éxito en el
+        ajedrez.
       </p>
     </TeacherProfile>
     <TeacherProfile
@@ -133,14 +134,14 @@ const socialMediaTeti = [
       socialMedia={socialMediaTeti}
     >
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Ajedrecista con una pasión innata por el juego y un enfoque innovador
-        hacia el aprendizaje. Con 26 años de edad y siendo hijo de dos grandes
-        maestros de ajedrez, Gilberto ha cultivado su habilidad y conocimiento
-        desde temprana edad, destacándose como un jugador y educador excepcional
-        en el mundo del ajedrez.
+        &emsp;Ajedrecista con una pasión innata por el juego y un enfoque
+        innovador hacia el aprendizaje. Con 26 años de edad y siendo hijo de dos
+        grandes maestros de ajedrez, Gilberto ha cultivado su habilidad y
+        conocimiento desde temprana edad, destacándose como un jugador y
+        educador excepcional en el mundo del ajedrez.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        En 2023, obtuvo el título de Candidate Master (CM), demostrando su
+        &emsp;En 2023, obtuvo el título de Candidate Master (CM), demostrando su
         habilidad y dedicación en el tablero. A lo largo de su carrera, ha
         logrado importantes reconocimientos, como el subcampeonato argentino sub
         18 a los 15 años y ha representado a Argentina en múltiples torneos
@@ -148,15 +149,15 @@ const socialMediaTeti = [
         internacional.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Gilberto también ha compartido su pasión y conocimiento como profesor de
-        ajedrez en diversos contextos, incluyendo su experiencia en colegios y
-        programas sociales. Como coordinador y profesor en un programa de
-        ajedrez social, ha integrado y enseñado a comunidades vulnerables,
-        demostrando su compromiso con la inclusión y el desarrollo a través del
-        ajedrez.
+        &emsp;Gilberto también ha compartido su pasión y conocimiento como
+        profesor de ajedrez en diversos contextos, incluyendo su experiencia en
+        colegios y programas sociales. Como coordinador y profesor en un
+        programa de ajedrez social, ha integrado y enseñado a comunidades
+        vulnerables, demostrando su compromiso con la inclusión y el desarrollo
+        a través del ajedrez.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        Su experiencia como entrenador de alto nivel le ha permitido
+        &emsp;Su experiencia como entrenador de alto nivel le ha permitido
         perfeccionar sus métodos de enseñanza, siempre buscando las formas más
         efectivas de aprendizaje para sus alumnos. Apasionado por la tecnología
         y el desarrollo de software, Gilberto encuentra en el ajedrez una fuente
