Nueva leyenda del hero sectino y retoques a los objetivos de nuestra academia

--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -35,12 +35,20 @@ import KingQueenImg from "../assets/img/king-queen.svg";
             servicio único, lleno de conocimientos y pasión por el ajedrez.
           </p>
           <p>
-            <strong>Nuestro objetivo es</strong> ayudarte a alcanzar tus metas mientras
-            disfrutas del <strong>Camino</strong>.
+            <strong
+              >Nuestro objetivo es ayudarte a alcanzar tus metas mientras
+              disfrutas del Camino</strong
+            >.
           </p>
           <p>
             Ya sea que sueñes con alcanzar la maestría o simplemente mejorar tu
             juego, te acompañaremos en cada paso.
+          </p>
+          <p>
+            Además, nuestra academia está orientada a formar ajedrecistas
+            profesionales, árbitros, entrenadores, y docentes de ajedrez,
+            brindando una educación ética deportiva y herramientas para enseñar
+            en diferentes escenarios.
           </p>
           <p>
             ¡Conéctate con nosotros desde cualquier parte del mundo y comienza
