Pequeños detalles agregados en el logo y linkeada la red instagram

--- a/src/components/EnjoyGiftSection.astro
+++ b/src/components/EnjoyGiftSection.astro
@@ -9,7 +9,7 @@ import GiftImage from "../assets/img/special-offers.svg";
         class="mb-8 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
       >
         <span class="block mb-2">¡Disfruta tu regalo!</span>
-        <span class="block text-white"> Aqui comienza tu aventura </span>
+        <span class="block text-white"> Aquí comienza tu aventura </span>
       </h2>
       <div class="bg-white py-8 px-8 sm:py-14 sm:px-14 rounded-xl">
         <div
