--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -101,7 +101,8 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
 
       <!-- Instagram -->
       <a
-        href="#"
+        href="https://www.instagram.com/academiacaminos/"
+        target="_blank"
         class="text-gray-400 transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
       >
         <svg
