--- a/src/pages/teachers.astro
+++ b/src/pages/teachers.astro
@@ -41,7 +41,10 @@ const socialMediaPablito = [
     link: "https://www.twitch.tv/pabloacosta99",
   },
   { Icon: SiInstagram, link: "https://www.instagram.com/pabloacosta.ok/" },
-  { Icon: SiFacebook, link: "https://www.facebook.com/pabloacosta" },
+  {
+    Icon: SiFacebook,
+    link: "https://web.facebook.com/profile.php?id=100003602469262",
+  },
 ];
 
 const socialMediaTeti = [
