Agregadas nuevas redacciones y/o modificaciones sobre los textos

--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -17,40 +17,41 @@ import KingQueenImg from "../assets/img/king-queen.svg";
         >
           <FaQuoteRight />
         </div>
-        <!-- <h2 class="text-4xl text-center mb-10 md:mb-16 font-bold"> -->
         <h2
           class="mb-8 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white text-center"
         >
           Nuestro Objetivo
         </h2>
         <div class="flex flex-col gap-2 text-base md:text-lg lg:order-2">
-          <p>
-            En nuestra academia, aspiramos a ser más que un simple espacio de
-            aprendizaje. Somos una comunidad abierta y acogedora, diseñada para <strong
-              >todos</strong
-            >: desde principiantes curiosos hasta ajedrecistas experimentados.
+          <p class="text-justify">
+            Somos una comunidad acogedora y abierta para <strong>todos</strong>:
+            principiantes, aficionados, ajedrecistas experimentados, personas
+            talentosas con grandes aspiraciones y aquellos que aún no descubren
+            la emoción del ajedrez.
           </p>
-          <p>
-            Con un equipo de Maestros de renombre internacional, te ofrecemos un
-            servicio único, lleno de conocimientos y pasión por el ajedrez.
+          <p class="text-justify">
+            Contamos con un equipo de Maestros de reconocida trayectoria
+            internacional que te brindan un servicio único, lleno de
+            conocimiento, pasión por el ajedrez y la educación.
           </p>
-          <p>
+          <p class="text-justify">
             <strong
-              >Nuestro objetivo es ayudarte a alcanzar tus metas mientras
-              disfrutas del Camino</strong
-            >.
+              >Nuestro principal objetivo es acompañarte en la realización de
+              tus metas, transmitiendo valores y atendiendo tus necesidades de
+              manera personalizada.</strong
+            >
           </p>
-          <p>
-            Ya sea que sueñes con alcanzar la maestría o simplemente mejorar tu
-            juego, te acompañaremos en cada paso.
+          <p class="text-justify">
+            Ya sea que sueñes con alcanzar la maestría en ajedrez o simplemente
+            ampliar tus conocimientos en diferentes áreas, estaremos contigo en
+            cada paso del camino. Nuestra Academia se compromete a desarrollar y
+            potenciar tus habilidades a través de la práctica del ajedrez,
+            acompañándote en cada etapa de tu vida y formando profesionales en
+            este deporte, incluyendo árbitros, entrenadores, docentes de
+            ajedrez, entre otros, con un enfoque integral en la ética deportiva
+            y el uso de diversas herramientas pedagógicas.
           </p>
-          <p>
-            Además, nuestra academia está orientada a formar ajedrecistas
-            profesionales, árbitros, entrenadores, y docentes de ajedrez,
-            brindando una educación ética deportiva y herramientas para enseñar
-            en diferentes escenarios.
-          </p>
-          <p>
+          <p class="text-justify">
             ¡Conéctate con nosotros desde cualquier parte del mundo y comienza
             tu viaje hacia la maestría ajedrecística hoy mismo!
           </p>
