--- a/src/components/PathsSection.astro
+++ b/src/components/PathsSection.astro
@@ -29,7 +29,7 @@ import { PathsTabs } from "./react/PathsTabs.jsx";
         class="sm:text-xl sm:font-light mt-4 max-w-sm lg:max-w-md mx-auto text-gray-700 w-2/3"
       >
         En nuestra academia hemos creado diferentes caminos pensando en ti y
-        contamos con los mejores profesionales para acompañarte en tu desarrollo
+        contamos con los mejores profesionales para acompañarte hacia tu meta.
       </p>
     </div>
   </div>
