Agregada nueva página con los terminos y condiciones de la academia

--- a/src/components/FAQsSection.astro
+++ b/src/components/FAQsSection.astro
@@ -24,7 +24,8 @@ import { FAQs } from "./react/FAQs";
         class="sm:text-xl sm:font-light mt-4 max-w-sm lg:max-w-md mx-auto text-gray-700 w-2/3"
       >
         Si tu pregunta no ha sido respondida aquí y deseas obtener más
-        información, no dudes en ponerte en contacto con nosotros.
+        información, no dudes en ponerte en contacto con nosotros enviando un
+        correo a <em>academiaajedrezcaminos@gmail.com</em>
       </p>
     </div>
   </div>
