--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,6 +31,14 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
           Preguntas Frecuentes
         </a>
       </li>
+      <li class="my-2">
+        <a
+          class="text-gray-400 hover:text-gray-800 dark:text-gray-300 dark:hover:text-white transition-colors duration-200"
+          href="/terminos"
+        >
+          Términos y Condiciones
+        </a>
+      </li>
       <!-- <li class="my-2">
         <a
           class="text-gray-400 hover:text-gray-800 dark:text-gray-300 dark:hover:text-white transition-colors duration-200"
