--- a/src/components/PriceCard.astro
+++ b/src/components/PriceCard.astro
@@ -51,7 +51,8 @@ const {
     </ul>
     <div class="mt-6 rounded-md shadow">
       <Link
-        href="#"
+        href="https://forms.gle/KAD3W7jwE4buhuhK7"
+        target="_blank"
         className="flex items-center justify-center px-5 py-3 text-base font-medium leading-6 text-gray-700 transition duration-150 ease-in-out bg-[#ff8c00c2] border border-transparent rounded-md hover:bg-[#ffba67c2] focus:outline-none focus:shadow-outline"
       >
         Incribirme
