Retoques a las faqs y actualizacion del perfil de Mader

--- a/src/pages/teachers.astro
+++ b/src/pages/teachers.astro
@@ -72,28 +72,30 @@ const socialMediaTeti = [
         el puesto 12 del mundo en 1991. Entre sus logros destacan la medalla de
         oro en el Campeonato Mundial Femenino Sub-20 de partidas rápidas en
         Australia 1988, la medalla de bronce en el mundial sub-20 femenino en
-        Chile 1990 y la medalla de plata en las Olimpiadas de Novi Sad 1990. Es
-        campeona argentina de ajedrez femenino en múltiples ocasiones y ha
-        representado a Argentina en diversas competiciones olímpicas. Además, ha
-        obtenido medallas de oro y plata en los Juegos Suramericanos 2022, ha
-        sido campeona panamericana, sudamericana y ha triunfado en varios
-        campeonatos absolutos.
+        Chile 1990 y la medalla de plata en las Olimpíadas de Novi Sad 1990. Fue
+        campeona argentina de ajedrez femenino en cinco oportunidades y ha
+        representado a Argentina en nueve Olimpíadas. Ha obtenido dos medallas
+        de oro y dos de plata en los Juegos Suramericanos ODESUR 2022, ha sido
+        campeona Panamericana, en siete ocasiones Sudamericana. También ha
+        triunfado en varios campeonatos absolutos.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        &emsp;Claudia Amura también es FIDE Trainer y ha sido entrenadora del
-        Equipo Continental Femenino en el Campeonato Mundial de Ajedrez por
-        equipos 2021. Es reconocida por su especialidad en trabajar con niños y
-        personas de todas las edades que deseen mejorar sus habilidades en el
-        ajedrez. Su metodología de enseñanza se destaca por su capacidad para
-        detectar las necesidades de sus estudiantes y ayudarlos a mejorar su
-        nivel, no solo corrigiendo errores y potenciando fortalezas, sino
-        también comprendiendo sus actitudes en la competición, lo que ella llama
-        "diagnóstico deportivo".
+        &emsp;Ha sido entrenadora del Equipo Continental Femenino en dos
+        oportunidades: el Campeonato Mundial de Ajedrez por equipos realizado en
+        Sitges, España 2021 y en Bydgoszcz, Polonia 2023.Es FIDE Trainer y
+        reconocida por su especialidad en trabajar con niños y personas de todas
+        las edades que deseen mejorar sus habilidades en el ajedrez. Su
+        metodología de enseñanza se destaca por su capacidad para detectar las
+        necesidades de sus estudiantes y ayudarlos a mejorar su nivel, no solo
+        corrigiendo errores y potenciando fortalezas, sino también comprendiendo
+        sus actitudes en la competición, lo que ella llama &quot;diagnóstico
+        deportivo&quot;.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
-        &emsp;Además, Claudia es la creadora de un programa de ajedrez que ha
-        tenido un impacto significativo, llegando a más de 200,000 personas en
-        la provincia de San Luis.
+        &emsp;Además, Claudia impulsó la enseñanza masiva del ajedrez en la
+        provincia de San Luis durante 18 años desde el Programa de Ajedrez
+        (2006-2023) con un impacto significativo en la población donde la mitad
+        de sus habitantes, 250.000, lo practican.
       </p>
     </TeacherProfile>
     <TeacherProfile
