--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -24,36 +24,37 @@ import KingQueenImg from "../assets/img/king-queen.svg";
         </h2>
         <div class="flex flex-col gap-2 text-base md:text-lg lg:order-2">
           <p class="text-justify">
-            Somos una comunidad acogedora y abierta para <strong>todos</strong>:
-            principiantes, aficionados, ajedrecistas experimentados, personas
+            &emsp;Somos una comunidad acogedora y abierta para <strong
+              >todos</strong
+            >: principiantes, aficionados, ajedrecistas experimentados, personas
             talentosas con grandes aspiraciones y aquellos que aún no descubren
             la emoción del ajedrez.
           </p>
           <p class="text-justify">
-            Contamos con un equipo de Maestros de reconocida trayectoria
+            &emsp;Contamos con un equipo de Maestros de reconocida trayectoria
             internacional que te brindan un servicio único, lleno de
             conocimiento, pasión por el ajedrez y la educación.
           </p>
           <p class="text-justify">
             <strong
-              >Nuestro principal objetivo es acompañarte en la realización de
-              tus metas, transmitiendo valores y atendiendo tus necesidades de
-              manera personalizada.</strong
+              >&emsp;Nuestro principal objetivo es acompañarte en la realización
+              de tus metas, transmitiendo valores y atendiendo tus necesidades
+              de manera personalizada.</strong
             >
           </p>
           <p class="text-justify">
-            Ya sea que sueñes con alcanzar la maestría en ajedrez o simplemente
-            ampliar tus conocimientos en diferentes áreas, estaremos contigo en
-            cada paso del camino. Nuestra Academia se compromete a desarrollar y
-            potenciar tus habilidades a través de la práctica del ajedrez,
-            acompañándote en cada etapa de tu vida y formando profesionales en
-            este deporte, incluyendo árbitros, entrenadores, docentes de
-            ajedrez, entre otros, con un enfoque integral en la ética deportiva
-            y el uso de diversas herramientas pedagógicas.
+            &emsp;Ya sea que sueñes con alcanzar la maestría en ajedrez o
+            simplemente ampliar tus conocimientos en diferentes áreas, estaremos
+            contigo en cada paso del camino. Nuestra Academia se compromete a
+            desarrollar y potenciar tus habilidades a través de la práctica del
+            ajedrez, acompañándote en cada etapa de tu vida y formando
+            profesionales en este deporte, incluyendo árbitros, entrenadores,
+            docentes de ajedrez, entre otros, con un enfoque integral en la
+            ética deportiva y el uso de diversas herramientas pedagógicas.
           </p>
           <p class="text-justify">
-            ¡Conéctate con nosotros desde cualquier parte del mundo y comienza
-            tu viaje hacia la maestría ajedrecística hoy mismo!
+            &emsp;¡Conéctate con nosotros desde cualquier parte del mundo y
+            comienza tu viaje hacia la maestría ajedrecística hoy mismo!
           </p>
         </div>
       </div>
