--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { SEOMetadata } from "astro-seo-metadata";
 import { MainNavigation } from "../components/react/MainNavigation.jsx";
 import Footer from "../components/Footer.astro";
 const { title } = Astro.props;
@@ -7,16 +8,27 @@ const { title } = Astro.props;
 <html id="top" class="scroll-smooth" lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <SEOMetadata
+      siteName="Academia de Ajedrez Caminos"
+      title={`${title} — Academia de Ajedrez Caminos`}
+      description={"Descubre la Academia de Ajedrez Caminos, donde potenciamos tu talento ajedrecístico con caminos personalizados, maestros de renombre internacional y un enfoque único en tu desarrollo como jugador. ¡Inicia tu camino con nosotros hoy mismo!"}
+      favicon={"/favicon.svg"}
+      author="Gilberto Hernández Amura"
+      astroSitemap={true}
+      canonicalUrl={Astro.url.toString()}
+      type={"website"}
+      astroGenerator={true}
+    />
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>{title} | Academia de Ajedrez Caminos</title>
+    <!-- <link rel="icon" type="image/svg" href="/favicon.svg" /> -->
+    <!-- <meta name="generator" content={Astro.generator} /> -->
+    <!-- <title>{title} | Academia de Ajedrez Caminos</title> -->
   </head>
   <body>
     <MainNavigation client:load />
