Pequeños cambios en textos de nuestro objetivo y perfil de mader

--- a/src/pages/teachers.astro
+++ b/src/pages/teachers.astro
@@ -75,9 +75,9 @@ const socialMediaTeti = [
         Chile 1990 y la medalla de plata en las Olimpíadas de Novi Sad 1990. Fue
         campeona argentina de ajedrez femenino en cinco oportunidades y ha
         representado a Argentina en nueve Olimpíadas. Ha obtenido dos medallas
-        de oro y dos de plata en los Juegos Suramericanos ODESUR 2022, ha sido
-        campeona Panamericana, en siete ocasiones Sudamericana. También ha
-        triunfado en varios campeonatos absolutos.
+        de oro y dos de plata en los Juegos Suramericanos ODESUR 2022. Fue
+        campeona Panamericana en 1977 y Sudamericana en siete ocasiones. También
+        ganó varios campeonatos absolutos.
       </p>
       <p class="md:text-lg text-gray-500 text-base text-justify">
         &emsp;Ha sido entrenadora del Equipo Continental Femenino en dos
