--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import { FaQuoteLeft, FaQuoteRight } from "react-icons/fa6";
 import KingQueenImg from "../assets/img/king-queen.svg";
 ---
@@ -59,11 +60,16 @@ import KingQueenImg from "../assets/img/king-queen.svg";
         </div>
       </div>
       <div class="flex justify-center bg-inherit lg:bg-[#ff8c00c2]">
-        <img
+        <Image
+          src={KingQueenImg}
+          alt="Un rey blanco y una dama negra jugando en un subibaja"
+          class="w-full sm:w-auto"
+        />
+        <!-- <img
           class="w-full sm:w-auto"
           src={KingQueenImg.src}
           alt="Un rey blanco y una dama negra jugando en un subibaja"
-        />
+        /> -->
       </div>
     </div>
   </div>
