Revert "Pequeños cambios en textos de nuestro objetivo y perfil de mader"
This reverts commit 2c80a3d82680fee903d3344060375ed98f32cee2.

--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -47,10 +47,10 @@ import KingQueenImg from "../assets/img/king-queen.svg";
             simplemente ampliar tus conocimientos en diferentes áreas, estaremos
             contigo en cada paso del camino. Nuestra Academia se compromete a
             desarrollar y potenciar tus habilidades a través de la práctica del
-            ajedrez, en cada etapa, formando profesionales en este deporte,
-            incluyendo árbitros, entrenadores, docentes de ajedrez, entre otros,
-            con un enfoque integral en la ética deportiva y el uso de diversas
-            herramientas pedagógicas.
+            ajedrez, acompañándote en cada etapa de tu vida y formando
+            profesionales en este deporte, incluyendo árbitros, entrenadores,
+            docentes de ajedrez, entre otros, con un enfoque integral en la
+            ética deportiva y el uso de diversas herramientas pedagógicas.
           </p>
           <p class="text-justify">
             &emsp;¡Conéctate con nosotros desde cualquier parte del mundo y
