Haciendo pruebas con las imagenes

--- a/src/components/TeacherProfile.astro
+++ b/src/components/TeacherProfile.astro
@@ -17,11 +17,7 @@ const {
   <div
     class=`w-full md:w-1/2 bg-white grid place-items-center ${isInverted ? "md:order-2":""}`
   >
-    <Image
-      class="h-full object-cover rounded-xl"
-      src={photo}
-      alt={`Foto de ${chessTitle} ${name}`}
-    />
+    <Image src={photo} alt={`Foto de ${chessTitle} ${name}`} />
     <!-- <img
       class="h-full object-cover rounded-xl"
       src={photo.src}
