Reverti los cambios utilizando astro img porque fallan con la build

--- a/src/components/TeacherProfile.astro
+++ b/src/components/TeacherProfile.astro
@@ -1,6 +1,4 @@
 ---
-import { Image } from "astro:assets";
-
 import SocialMedia from "./SocialMedia.astro";
 const {
   photo,
@@ -17,12 +15,11 @@ const {
   <div
     class=`w-full md:w-1/2 bg-white grid place-items-center ${isInverted ? "md:order-2":""}`
   >
-    <Image src={photo} alt={`Foto de ${chessTitle} ${name}`} />
-    <!-- <img
+    <img
       class="h-full object-cover rounded-xl"
       src={photo.src}
       alt={`Foto de ${chessTitle} ${name}`}
-    /> -->
+    />
   </div>
   <div
     class=`w-full md:w-1/2 bg-white flex flex-col p-3 gap-2 ${isInverted ? "md:order-1":""}`
