--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -20,6 +20,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Básico"
       price={75}
+      formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
       characteristics={[
         "Una clase grupal por semana",
         "Participación en un evento online mensual",
@@ -33,6 +34,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Intermedio"
       price={130}
+      formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
       characteristics={[
         'Todo del plan "Básico" salvo superposiciones',
         "Dos clases grupales por semana",
@@ -45,6 +47,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Premium"
       price={250}
+      formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
       characteristics={[
         'Todo del plan "Intermedio" salvo superposiciones',
         "Dos clases privadas semales con elección de profesor",
@@ -57,6 +60,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Diagnostico Deportivo"
       price={100}
+      formLink="https://docs.google.com/forms/d/e/1FAIpQLSceohiDsdGEbAxo-3MnN1OldRE9G7EpKxN6GVRzIoeWvshyYw/viewform?usp=sf_link"
       timeSpectrum="c.u."
       characteristics={[
         "Análisis completo y diseño del perfil ajedrecístico",
