Se estandarizaron los estilos de los botones para el sitio

--- a/src/components/DiscoverSection.astro
+++ b/src/components/DiscoverSection.astro
@@ -4,7 +4,6 @@ import GiftImg from "../assets/img/giveaway.svg";
 ---
 
 <section class="px-8 py-20 sm:px-24 lg:px-32 flex flex-col">
-  <!-- <h2 class="text-4xl text-center mb-10 md:mb-16 font-bold"> -->
   <h2
     class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white text-center"
   >
@@ -32,7 +31,7 @@ import GiftImg from "../assets/img/giveaway.svg";
     </div>
   </div>
   <Link
-    className="self-center flex items-center justify-center px-5 py-3 text-base font-medium leading-6 text-gray-800 transition duration-150 ease-in-out bg-[#ff8c00c2] border border-transparent rounded-md hover:bg-[#ffba67c2] focus:outline-none focus:shadow-outline "
+    className="self-center flex items-center justify-center px-5 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-[#ff8c00c2] border border-transparent rounded-md hover:bg-[#ff8c00e8] active:bg-[#ff8c00c2] focus:outline-none focus:shadow-outline "
     href="/free-course/"
   >
     Comenzar Curso Gratuito
