Se añadió el Camino de las Damas y sesoluciono la responsibidad de las tabs

--- a/src/components/OurGoalSection.astro
+++ b/src/components/OurGoalSection.astro
@@ -32,7 +32,7 @@ import KingQueenImg from "../assets/img/king-queen.svg";
           </p>
           <p class="text-justify">
             &emsp;Contamos con un equipo de Maestros de reconocida trayectoria
-            internacional que te brindan un servicio único, lleno de
+            internacional que te brindarán un servicio único, lleno de
             conocimiento, pasión por el ajedrez y la educación.
           </p>
           <p class="text-justify">
