Se añadio el boton flotante de WhatsApp

--- a/src/components/WhatsAppButton.astro
+++ b/src/components/WhatsAppButton.astro
@@ -1,5 +1,14 @@
 ---
 import { SiWhatsapp } from "react-icons/si";
+const phoneContact = "+542664969002";
 ---
 
-<SiWhatsapp />
+<a
+  href=`https://wa.me/${phoneContact}`
+  target="_blank"
+  class="fixed bottom-10 right-10 z-[999]"
+>
+  <div class="bg-white p-3 rounded-full shadow drop-shadow">
+    <SiWhatsapp fill="#25D366" className="w-8 h-8 md:w-10 md:h-10" />
+  </div>
+</a>
