--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import { SEOMetadata } from "astro-seo-metadata";
 import { MainNavigation } from "../components/react/MainNavigation.jsx";
 import Footer from "../components/Footer.astro";
+import WhatsAppButton from "../components/WhatsAppButton.astro";
 const { title } = Astro.props;
 ---
 
@@ -32,5 +33,6 @@ const { title } = Astro.props;
     <MainNavigation client:load />
     <slot />
     <Footer />
+    <WhatsAppButton />
   </body>
 </html>
