Agregados los links a redes sociales y se añadio el logo de youtube

--- a/src/components/WhatsAppButton.astro
+++ b/src/components/WhatsAppButton.astro
@@ -8,7 +8,9 @@ const phoneContact = "+542664969002";
   target="_blank"
   class="fixed bottom-10 right-10 z-[999]"
 >
-  <div class="bg-white p-3 rounded-full shadow drop-shadow">
+  <div
+    class="bg-white p-3 rounded-full shadow drop-shadow hover:bg-slate-50 transition-colors"
+  >
     <SiWhatsapp fill="#25D366" className="w-8 h-8 md:w-10 md:h-10" />
   </div>
 </a>
