--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -49,9 +49,10 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
       </li> -->
     </ul>
     <div class="pt-8 flex max-w-xs mx-auto items-center justify-between">
-      <!-- Facebook -->
+      <!-- YouTube logo -->
       <a
-        href="#"
+        target="_blank"
+        href="https://www.youtube.com/@AcademiaAjedrezCaminos"
         class="text-gray-400 transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
       >
         <svg
@@ -59,19 +60,19 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
           height="20"
           fill="currentColor"
           class="text-xl transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
-          viewBox="0 0 1792 1792"
+          viewBox="0 0 461 461"
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
-            d="M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759h-306v-759h-255v-296h255v-218q0-186 104-288.5t277-102.5q147 0 228 12z"
-          >
-          </path>
+            d="M365.257,67.393H95.744C42.866,67.393,0,110.259,0,163.137v134.728 c0,52.878,42.866,95.744,95.744,95.744h269.513c52.878,0,95.744-42.866,95.744-95.744V163.137 C461.001,110.259,418.135,67.393,365.257,67.393z M300.506,237.056l-126.06,60.123c-3.359,1.602-7.239-0.847-7.239-4.568V168.607 c0-3.774,3.982-6.22,7.348-4.514l126.06,63.881C304.363,229.873,304.298,235.248,300.506,237.056z"
+          ></path>
         </svg>
       </a>
 
       <!-- X (Twitter) -->
       <a
-        href="#"
+        target="_blank"
+        href="https://twitter.com/academiacaminos"
         class="text-gray-400 transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
       >
         <svg
@@ -79,7 +80,7 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
           width="20"
           height="20"
           fill="currentColor"
-          viewBox="0 0 300 300"
+          viewBox="0 0 350 350"
           class="text-xl transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
         >
           <path
@@ -87,25 +88,6 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
           ></path>
         </svg>
       </a>
-      <!-- Github logo -->
-      <!-- <a
-        href="#"
-        class="text-gray-400 transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="20"
-          fill="currentColor"
-          class="text-xl transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
-          viewBox="0 0 1792 1792"
-        >
-          <path
-            d="M896 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 .5-76.5t.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z"
-          >
-          </path>
-        </svg>
-      </a> -->
 
       <!-- Instagram -->
       <a
@@ -130,9 +112,11 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
           <circle cx="390.476" cy="121.524" r="30.23"></circle>
         </svg>
       </a>
-      <!-- Amazon logo -->
-      <!-- <a
-        href="#"
+
+      <!-- Facebook -->
+      <a
+        target="_blank"
+        href="https://www.facebook.com/people/Academia-Ajedrez-Caminos/61558452526833/"
         class="text-gray-400 transition-colors duration-200 hover:text-gray-800 dark:hover:text-white"
       >
         <svg
@@ -144,11 +128,11 @@ import LogoPlaceHolder from "../assets/img/LogoPlaceHolder.svg";
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
-            d="M1551 1476q15-6 26-3t11 17.5-15 33.5q-13 16-44 43.5t-95.5 68-141 74-188 58-229.5 24.5q-119 0-238-31t-209-76.5-172.5-104-132.5-105-84-87.5q-8-9-10-16.5t1-12 8-7 11.5-2 11.5 4.5q192 117 300 166 389 176 799 90 190-40 391-135zm207-115q11 16 2.5 69.5t-28.5 102.5q-34 83-85 124-17 14-26 9t0-24q21-45 44.5-121.5t6.5-98.5q-5-7-15.5-11.5t-27-6-29.5-2.5-35 0-31.5 2-31 3-22.5 2q-6 1-13 1.5t-11 1-8.5 1-7 .5h-10l-3-.5-2-1.5-1.5-3q-6-16 47-40t103-30q46-7 108-1t76 24zm-394-443q0 31 13.5 64t32 58 37.5 46 33 32l13 11-227 224q-40-37-79-75.5t-58-58.5l-19-20q-11-11-25-33-38 59-97.5 102.5t-127.5 63.5-140 23-137.5-21-117.5-65.5-83-113-31-162.5q0-84 28-154t72-116.5 106.5-83 122.5-57 130-34.5 119.5-18.5 99.5-6.5v-127q0-65-21-97-34-53-121-53-6 0-16.5 1t-40.5 12-56 29.5-56 59.5-48 96l-294-27q0-60 22-119t67-113 108-95 151.5-65.5 190.5-24.5q100 0 181 25t129.5 61.5 81 83 45 86 12.5 73.5v589zm-672 21q0 86 70 133 66 44 139 22 84-25 114-123 14-45 14-101v-162q-59 2-111 12t-106.5 33.5-87 71-32.5 114.5z"
+            d="M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759h-306v-759h-255v-296h255v-218q0-186 104-288.5t277-102.5q147 0 228 12z"
           >
           </path>
         </svg>
-      </a> -->
+      </a>
     </div>
     <div
       class="text-center text-gray-500 dark:text-gray-200 pt-10 sm:pt-12 font-light flex items-center justify-center"
