Se añadio un item sobre la reserva del derecho de admision en terminos y condiciones

--- a/src/pages/terminos.astro
+++ b/src/pages/terminos.astro
@@ -92,6 +92,17 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </p>
       </div>
       <div>
+        <p><strong>Reserva de Derecho de Admisión:</strong></p>
+        <p>
+          La Academia de Ajedrez Caminos se reserva el derecho de admisión de
+          alumnos, pudiendo denegar la inscripción o la participación en
+          actividades académicas, eventos o torneos, sin necesidad de
+          justificación ni explicación. Esta medida se toma para garantizar un
+          ambiente educativo y de convivencia adecuado para todos los alumnos y
+          colaboradores de la academia.
+        </p>
+      </div>
+      <div>
         <p class="font-bold">
           Al inscribirse en la Academia de Ajedrez Caminos, los alumnos y sus
           tutores legales aceptan y se comprometen a cumplir con estos términos
