Actualizados los planes y mejorada la presentacion del priceCard

--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -19,34 +19,36 @@ import PriceCard from "./PriceCard.astro";
   <div class="flex flex-wrap flex-col md:flex-row gap-4 justify-center">
     <PriceCard
       title="Básico"
-      price={75}
+      price={40}
       formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
       characteristics={[
-        "Una clase grupal por semana",
-        "Participación en un evento online mensual",
+        "Ocho clases grupales por mes",
+        "Participación en eventos online de la academia",
         "Acceso a los materiales de estudio",
-        "Mini-clase de posicionamiento de nivel. (Única vez)",
       ]}
     />
 
     <PriceCard
       title="Intermedio"
-      price={130}
+      price={100}
       formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
       characteristics={[
-        'Todo del plan "Básico" salvo superposiciones',
-        "Dos clases grupales por semana",
-        "Participación en todos los eventos online",
+        "Ocho clases grupales por mes",
+        "Dos clases privadas por mes",
+        "Participación en eventos online de la academia",
+        "Acceso a los materiales de estudio",
       ]}
     />
 
     <PriceCard
       title="Premium"
-      price={250}
+      price={200}
       formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
       characteristics={[
-        'Todo del plan "Intermedio" salvo superposiciones',
-        "Dos clases privadas semales con elección de profesor",
+        "Ocho clases grupales por mes",
+        "Cuatro clases privadas por mes",
+        "Participación en eventos online de la academia",
+        "Acceso a los materiales de estudio",
         'Un "Diagnóstico Deportivo" anual',
       ]}
     />
