--- a/src/components/PriceCard.astro
+++ b/src/components/PriceCard.astro
@@ -16,7 +16,7 @@ const {
 ---
 
 <div
-  class="mb-4 overflow-hidden rounded-lg shadow-lg drop-shadow flex-grow md:w-1/3 md:max-w-[350px] flex flex-col justify-between bg-white"
+  class="mb-4 overflow-hidden rounded-lg shadow-lg drop-shadow flex-grow md:w-1/3 md:max-w-[350px] flex flex-col justify-start bg-white"
 >
   <div class="px-6 py-8 bg-white dark:bg-gray-800 sm:p-10 sm:pb-6">
     <div class="flex justify-center">
@@ -37,7 +37,9 @@ const {
       </span>
     </div>
   </div>
-  <div class="px-6 pt-0 pb-8 bg-white dark:bg-gray-800 sm:p-10 sm:pt-0">
+  <div
+    class="px-6 pt-0 pb-8 bg-white dark:bg-gray-800 sm:p-10 sm:pt-0 flex flex-col justify-between h-full"
+  >
     <ul>
       {
         characteristics.map((characteristic) => (
@@ -53,7 +55,6 @@ const {
       >
         Incribirme
       </a>
-      <slot />
     </div>
   </div>
 </div>
